@@ -1,3 +1,6 @@
+2011-02-15
+* use 'file' to determine the size of squashfs file systems.
+
 2011-02-13
 * only pass data between cpio header and trailer to the cpio unpacker.
 * start inlining methods in certain checks that don't have to be separate
